changed errors and added color to buttons

--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+:root {
+    --main-text-color: #000;
+    --main-bg-color: #fff;
+    --button-color: rgb(58, 240, 170);
+}
+
 body {
     background-color: var(--main-bg-color);
     font-family: sans-serif;
     height: 1vh;
-    background-image: url;
 }
 
 header {
@@ -12,11 +17,10 @@ header {
     margin: auto;
     justify-content: space-between;
     align-items: center;
- }
+}
 
 
 main {
-    min-height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -24,27 +28,26 @@ main {
     line-height: 3.0;
 }
 
-div {
-    color:darkslategray var(--main-text-color);
-}
-
 #timer,
 #highscores {
-    background-color: lavender; var (--button-color);
+    background-color: var(--button-color);
     padding: 16px;
     border-radius: 30px;
     color: var(--light-text-color);
     font-size: 1.3em;
 }
 
-#welcome {
+.box {
     background: var(--main-bg-color);
-    height: var(--box-height);
-    width: var(--box-height);
+    height: 500px;
+    width: 500px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     border-radius: 30px;
-    
+}
+
+#end {
+    display: none;
 }
