--- a/style.css
+++ b/style.css
@@ -14,13 +14,16 @@ body {
 header {
     width: 60;
     height: 100px;
-   color: #ff69b4;
     display: flex;
     margin: auto;
     justify-content: space-between;
     align-items: center;
 }
 
+{ h1
+    background-color: lightgrey;
+    color: #FF69B4
+}
 
 main {
     display: flex;
